--- a/files/css/dashboard.css
+++ b/files/css/dashboard.css
@@ -18,11 +18,28 @@
     margin: 20px 20px 0 20px;
 }
 
+
+.trigger-body {
+    display: grid;
+    grid-template-columns: calc((100% - 120px) / 2) 43px calc((100% - 120px) / 2) 77px;
+    align-items: center;
+}
+
 .trigger-card {
     display: grid;
     /*grid-template-columns: 41px 165px 117px 90px 16px;*/
-    grid-template-columns: 41px 165px;
+    grid-template-columns: 45px 165px;
     grid-template-rows: 1fr;
     grid-column-gap: 5px;
     align-items: center;
+}
+
+.trigger-action {
+    display: grid;
+    grid-template-columns: 63px 90px 70px;
+    /*grid-template-rows: 1fr;*/
+    grid-column-gap: 5px;
+    align-items: center;
+
+    padding-left: 40px;
 }
