--- a/files/css/main.css
+++ b/files/css/main.css
@@ -1,7 +1,7 @@
-.footer-container {
+/*.footer-container {
     position: absolute;
     bottom: 0;
     left: 0;
     margin: 0 auto;
     width: 100vw !important;
-}
+}*/
